--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "formik": "^2.4.6",
     "json-server": "^1.0.0-beta.3",
+    "mongodb": "^6.15.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
