--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "formik": "^2.4.6",
     "json-server": "^1.0.0-beta.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
